<resources>
    <string name="app_name">Minipoly</string>
    <string name="title_activity_maps">Map</string>
    <string name="followers">Folowers</string>
    <string name="public_sales">Public Sales</string>
    <string name="r_count_value">RealEstate No/value</string>
    <string name="m_count_value">Market No/value</string>
    <string name="add_realestate">Add Realestate item Here</string>
    <string name="add_market">Add Market itme Here</string>
    <string name="search_map">Search Realestates here</string>
    <string name="choose">Choose Action</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="subcategory">Subcategory</string>
    <string name="add_description">Add Description</string>
    <string name="room_count">Room Count</string>
    <string name="bathroom_count">Bathrooms</string>
    <string name="building_age">Building age</string>
    <string name="furnished">Furnished</string>
    <string name="yearly_rent">Yearly Rent</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="set_default">Default</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="add">Add</string>
    <string name="current_image">Current Image</string>
    <string name="total_progress">Overall</string>
    <string name="new_tag">New</string>
    <string name="area">Area</string>
    <string name="empty_fields">Please Fill empty fields</string>
    <string name="added">Added successfully</string>
    <string name="error_add">Error operation Failed</string>
    <string name="brokerage">Brokerage</string>
    <string name="share">Share</string>
    <string name="add_comment">Write Comment</string>
    <string name="dealsCount">Deals</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_name">Change Name</string>
    <string name="change_email">Change E-mail</string>
    <string name="change_phone">Change Phone</string>
    <string name="change_bio">Change BIO</string>
    <string name="current_name">Current Name</string>
    <string name="current_email">Current Email</string>
    <string name="current_phone">Current Phone</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_error">* Failed to upload image</string>
    <string name="error">Error, Operation failed</string>
    <string name="update_success">User Info Updated Successfully</string>
    <string name="rent">Rent</string>
    <string name="sell">Sale</string>
    <string name="type">Type</string>
    <string name="no_comments">No comments</string>
    <string name="offer_owner">Offer owner</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="no_messages">No messages yet</string>
    <string name="order_deal">More..</string>
    <string name="kilometers">Kilometers</string>
    <string name="transmission">Transmission</string>
    <string name="select_category">Select category</string>
    <string name="select_subcategory">Select subcategory</string>
    <string name="top_bid">Top bid</string>
    <string name="auction_owner">Auction owner</string>
    <string name="last_price_by">Last price by</string>
    <string name="view_all">View all</string>
    <string name="confirm">Confirm</string>
    <string name="notify_friends">Notify my friends</string>
    <string name="add_auction">Add auction here</string>
    <string name="start_price">Starting price</string>
    <string name="no_bids">No bids yet</string>
    <string name="call">... Call</string>
    <string name="send_message">Send message</string>
    <string name="view_profile">View profile</string>
    <string name="block">Block</string>
    <string name="block_disqualify">Block and disqualify</string>
    <string name="enter_auction">Enter Auction Now</string>
    <string name="blocked">You are blocked</string>
    <string name="message">Message</string>
    <string name="auction_ended">Auction ended</string>
    <string name="used_tag">Used</string>
    <string name="mapbox_token">pk.eyJ1Ijoia2FtZWxvb3YiLCJhIjoiY2swazh0endwMGl1dDNkcXMxcWZnODlnayJ9.5VCEVveo3r2ZnYlyyW9I7g</string>
    <string name="provided_by">Provided by</string>
    <string name="contact_auction_owner">Contact auction owner</string>
    <string name="bidders">Bidders</string>
    <string name="close_page">Close page</string>
    <string name="page_close">This page will close after 48 hours</string>
    <string name="auction_end_contact">wants to talk to you about auction</string>
    <string name="last_bidder">You are the top bidder, you can\'t bid now</string>
    <string name="notify">Notify</string>
    <string name="default_notification_channel_id">Minipoly channel</string>
    <string name="realestate_not_found">Couldn\'t  open link</string>
    <string name="web_client_id">408452374408-l5445sn63oa81hh5spq67j42u0e87av5.apps.googleusercontent.com</string>
    <string-array name="colors">
        <item>Black</item>
        <item>White</item>
        <item>Silver</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Gray</item>
        <item>Orange</item>
        <item>Sky blue</item>
    </string-array>
    <string-array name="brands">
        <item>BMW</item>
        <item>Audi</item>
        <item>VolksWegan</item>
        <item>Porsche</item>
        <item>Honda</item>
        <item>Hyundai</item>
        <item>Kia</item>
        <item>Volvo</item>
        <item>Nissan</item>
        <item>Fiat</item>
        <item>Ferrari</item>
        <item>Mazda</item>
    </string-array>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="unfollow">Unfollow</string>
    <string name="reviewes">Reviewes</string>
    <string name="no_followers">No followers</string>
    <string name="not_following">Not following any one yet</string>
    <string name="no_reviews">No reviews yet !</string>
    <string name="categories">Categories</string>
    <string name="rented">Rented</string>
    <string name="promote">Promote</string>
    <string name="discount">Discount</string>
    <string name="promote_description">Promote your deal so every one can see it</string>
    <string name="discount_description">Offer a discount for this deal</string>
    <string name="convy_description">Transfer deal ownership and get rated</string>
    <string name="convy">Convy</string>
    <string name="discount_value">Discount value %</string>
    <string name="discount_duration">Discount duration</string>
    <string name="days">Days</string>
    <string name="promote_duration">Promote duration</string>
    <string name="request_transfer">Request property transfer</string>
    <string name="check_deal">Please check this Deal on Minipoly</string>
    <string name="report_user">Report</string>
    <string name="reported">Report was sent successfully</string>
    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="unfurnished">Unfurnished</string>
    <string name="storage">Storage</string>
    <string name="ram">Ram</string>
    <string name="battery">Battery</string>
    <string name="color">Color</string>
    <string name="location">Location</string>
    <string name="select_country">Select Country</string>
    <string name="select_city">Select City</string>
    <string name="ad_location">Advertisment location</string>
    <string name="add_promoted_ad">Add Promoted Advirtisment</string>
    <string name="add_failed">Error, Failed to add</string>
    <string name="add_success">Added Successfully !</string>
    <string name="number_with_code">phone nuumber</string>
    <string name="link">Link</string>
    <string name="cntact_whatsapp">Contact on Whatsapp</string>
    <string name="contact_link">Open Link</string>
    <string name="new_deal">New Deal</string>
    <string name="new_auction">New Auction</string>
    <string name="new_ad">New Advertisement</string>
    <string name="ads">Ads</string>
    <string name="update_realestate">Update Item</string>
    <string name="last_price">Last price :</string>
    <string name="by">By</string>
    <string name="add_first_bid">Add first bid</string>
    <string name="no_auction">No auctions !!</string>
    <string name="no_offers">No offers !!</string>
    <string name="location_error">Error getting location data, please try again</string>
    <string name="call_owner">Call owner</string>
    <string name="sales">Sales</string>
    <string name="average_price">Average price</string>
    <string name="rent_type">Rent type</string>
    <string name="yes">Yes</string>
    <string name="all">All</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="near_you">Near you</string>
    <string name="discover">Discover</string>
</resources>
