<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pop"
            type="com.minipoly.android.popup.PopupRealestateFilter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/notification"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView163"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/blue_button_outline_rect"
            android:gravity="center"
            android:onClick="@{()->pop.cancel()}"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline77"
            app:layout_constraintTop_toTopOf="@+id/textView160" />

        <TextView
            android:id="@+id/textView160"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/red_button_rect"
            android:gravity="center"
            android:onClick="@{()->pop.ok()}"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:paddingRight="8dp"
            android:paddingBottom="4dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/guideline77"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch10" />

        <Switch
            android:id="@+id/switch10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={pop.unfurnished}"
            android:text="@string/unfurnished"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch9" />

        <Switch
            android:id="@+id/switch7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={pop.yearRent}"
            android:text="@string/yearly_rent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch6" />

        <Switch
            android:id="@+id/switch9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={pop.furnished}"
            android:text="@string/furnished"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch7" />

        <ImageView
            android:id="@+id/imageView77"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include25"
            app:srcCompat="@drawable/line" />

        <ImageView
            android:id="@+id/imageView75"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include21"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/textView153"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/area"
            app:layout_constraintBottom_toBottomOf="@+id/include21"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include21" />

        <include
            android:id="@+id/include21"
            layout="@layout/radios_sm"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView153"
            app:layout_constraintTop_toBottomOf="@+id/imageView74"
            app:radio="@{pop.areaOrder}" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="@+id/include20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include20" />

        <include
            android:id="@+id/include20"
            layout="@layout/radios_sm"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView71"
            app:layout_constraintTop_toTopOf="parent"
            app:radio="@{pop.priceOrder}" />

        <ImageView
            android:id="@+id/imageView74"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include20"
            app:srcCompat="@drawable/line" />

        <TextView
            android:id="@+id/textView154"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/room_count"
            app:layout_constraintBottom_toBottomOf="@+id/include22"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include22" />

        <TextView
            android:id="@+id/textView155"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/bathroom_count"
            app:layout_constraintBottom_toBottomOf="@+id/include25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include25" />

        <Switch
            android:id="@+id/switch6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:checked="@={pop.monthRent}"
            android:text="@string/monthly_rent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView77" />

        <include
            android:id="@+id/include22"
            layout="@layout/number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView154"
            app:layout_constraintTop_toBottomOf="@+id/imageView75"
            app:num="@{pop.rooms}" />

        <include
            android:id="@+id/include25"
            layout="@layout/number_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/include22"
            app:layout_constraintTop_toBottomOf="@+id/include22"
            app:num="@{pop.bathrooms}" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>