<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    <variable
        name="vm"
        type="com.minipoly.android.ui.popup.PopUpViewModel" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:elevation="4dp"
        app:cardElevation="4dp"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.popup.PopUpDialog">


        <TextView
            android:id="@+id/txtAddReal"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="TextView"
            android:textSize="14sp"
            tools:text="@string/add_realestate" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/browser_actions_title_color" />

        <TextView
            android:id="@+id/txtAddMarket"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/add_market"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/browser_actions_title_color" />

        <TextView
            android:id="@+id/txtSearchMap"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/search_map"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>